--- a/result/results.ipynb
+++ b/result/results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -55,15 +55,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -73,13 +64,13 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Reward')\n",
     "plt.title('td3 + reward shaping: Episode vs. Reward')\n",
-    "plt.show()\n",
-    "plt.savefig('td3+reward_shaping.png')"
+    "plt.savefig('td3+reward_shaping.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -93,15 +84,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -111,13 +93,13 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Reward')\n",
     "plt.title('ddpg: Episode vs. Reward')\n",
-    "plt.show()\n",
-    "plt.savefig('ddpg.png')"
+    "plt.savefig('ddpg.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -131,15 +113,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -149,13 +122,13 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Reward')\n",
     "plt.title('ddpg + UFVA: Episode vs. Reward')\n",
-    "plt.show()\n",
-    "plt.savefig('ddpg+UFVA.png')"
+    "plt.savefig('ddpg+UFVA.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -169,15 +142,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -187,13 +151,13 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Reward')\n",
     "plt.title('ddpg + her: Episode vs. Reward')\n",
-    "plt.show()\n",
-    "plt.savefig('ddpg+her.png')"
+    "plt.savefig('ddpg+her.png')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -206,15 +170,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -230,8 +185,8 @@
     "plt.xlabel('Episode')\n",
     "plt.ylabel('Reward')\n",
     "plt.title('Episode vs. Reward')\n",
-    "plt.show()\n",
-    "plt.savefig('sb3_ddpg+her_td3+her.png')"
+    "plt.savefig('sb3_ddpg+her_td3+her.png')\n",
+    "plt.show()"
    ]
   },
   {
